# stalin-sort

./: .gitignore  CONTRIBUTING.md  LICENSE  StalinSort_test.sol  available-languages.md  readme.md
AL/: stalin-sort-testpage.al  stalin-sort-testreport.al  stalin-sort.al
APL/: stalinsort.apl
Ada/: stalin-sort.adb
AutoIt/: stalin-sort.au3
C/: example-double.c  example-int.c  example-stalin.c  example_double.c  example_stalin.c  stalin-sort.c  stalin-sort.h  stalinSort(old).c  stalinSort.c  stalin_avx512.c  stalin_sort.c  stalin_sort.h  test.c
C++/: Matriz caracol.cpp  a.out  compile_time_stalin_sort.cpp  compile_time_stalin_sort_using_cpp17_and_boost.cpp  compitle_time_salin_sort_using_cpp17_and_boost.cpp  simple_stalin_sort.cpp  stalin_sort.cpp  stalin_sort.h  stalin_sort.hpp  test.cpp
C++/stalin_sort/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
C++/stalin_sort/include/: stalin_sort.hpp
C++/stalin_sort/tests/: CMakeLists.txt  stalin_sort_tests.cpp
Coffeescript/: stalin-sort.coffee
DM/: stalin_sort.dm
Dafny/: stalin-sort.dfy
Delphi/: StalinSortByDelphi.dpr
DreamBerd/: stalin-sort.db
Easy-Programming-Language-易语言/: 1.e  text_only.txt
Emojicode/: StalinSort.Test.emojic  StalinSort.emojic
GDScript/: stalin_sort.gd
GameMakerLanguage/: stalinsort.gml
HolyC/: example-stalin.HC  stalin-sort.HC
IBM RPG IV/: stalin-sort-example-fixed-form.rpgle  stalin-sort-example-free-form.rpgle
MATLAB/: stalin_sort.m  stalinsort.m
MalbolgeUnshackled/: README  fast20.c
MemeAssembly/: stalin-sort.memeasm
Neko/: stalin-sort.neko
OSTRAjava/: StalinSort.cyp
Rebol/: stalin-sort-test.r3  stalin-sort.reb
Red/: stalin-sort.red
StalinSort/: StalinSort.sln
Typst/: stalin_sort.typ
agda/: StalinSort.agda
ajsone/: stalin_sort.json
awk/: stalinsort.awk
bash/: stalinsort.sh
(+204 files in other folders)
